{
    "name": "Boat_InputActions",
    "maps": [
        {
            "name": "Boat_Keyboard",
            "id": "55a3e781-24d5-428b-825c-ac7eb8965544",
            "actions": [
                {
                    "name": "Rudder",
                    "type": "PassThrough",
                    "id": "d65ee7a9-4e6a-4a70-8c5c-7fbda52e3ed6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SailTension",
                    "type": "PassThrough",
                    "id": "e5c802e0-616c-4e98-97ee-a1e2a566a0cb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchSides",
                    "type": "Value",
                    "id": "c32562d9-ad25-4350-906b-988a8d6417c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "bc084548-5937-4856-8416-d1e87aca004d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GenerateGlobalWind",
                    "type": "Button",
                    "id": "1f8adebb-8a81-470f-be19-e3d3b29aa367",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartTension",
                    "type": "Button",
                    "id": "650bafae-e0c1-43ef-9cfd-33e148c36459",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD_Steering",
                    "id": "93571e3e-6ebd-40cd-b321-e8a83cf9417c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "41be5fcb-150d-40ac-91c9-cb97ee102d66",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "40021911-2428-4c13-9ac8-f6c3dd744570",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rudder",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1d9b2ac6-9437-4b23-9164-322f2b5f39f8",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SailTension",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "QE_Sides",
                    "id": "bb60be60-0aac-49a3-a568-5e704ba42a48",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchSides",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "33744251-19c2-474b-9758-43923030cfb8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchSides",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b0e974da-b6d4-4f21-8185-0cc499852fcd",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchSides",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a5f1dc61-0571-4cdb-8ab8-0e5cc44cd3fd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8c1b7bc-1d39-4fbe-8108-358fd4643f12",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GenerateGlobalWind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96499fd7-ec45-437f-be3d-2c3583db7359",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartTension",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}